# ubb-computer-science

./: .gitignore  README.md  main.py
Algoritmica-Grafurilor/: main.cpp
FP/lab 2/: 15.py  (+7 more)
Object-Oriented-Programing/lab10/: CMakeLists.txt
Object-Oriented-Programing/lab10/database/: stock.txt
Object-Oriented-Programing/lab10/include/: GUI.hpp  Undo.hpp
Object-Oriented-Programing/lab10/src/: Book.cpp  GUI.cpp  Test.cpp  main.cpp
Object-Oriented-Programing/lab13/: CMakeLists.txt
Object-Oriented-Programing/lab13/database/: stock.txt  style.css
Object-Oriented-Programing/lab13/include/: GUI.hpp  ListModel.hpp  Observer.hpp  Service.hpp  ShoppingCartDrawing.hpp  ShoppingCartWindow.hpp  Test.hpp  Validator.hpp
Object-Oriented-Programing/lab13/src/: GUI.cpp  ListModel.cpp  Service.cpp  ShoppingCartDrawing.cpp  ShoppingCartWindow.cpp  TableModel.cpp  Validator.cpp  main.cpp
Object-Oriented-Programing/lab4/: CMakeLists.txt
Object-Oriented-Programing/lab4/include/: console.h  entity.h  repository.h  service.h  tests.h  validator.h
Object-Oriented-Programing/lab4/src/: console.c  entity.c  main.c  repository.c  service.c  tests.c  validator.c
Object-Oriented-Programing/lab5/: CMakeLists.txt  main.c
Object-Oriented-Programing/lab5/Domain/: lista.c  lista.h  medicament.c  medicament.h
Object-Oriented-Programing/lab5/Service/: Service.c  Service.h
Object-Oriented-Programing/lab5/Tests/: tests.c  tests.h
Object-Oriented-Programing/lab5/Ui/: Menu.c  Menu.h
Object-Oriented-Programing/lab5/Utility/: Utility.c  Utility.h
Object-Oriented-Programing/lab5/Validator/: validator.c  validator.h
Object-Oriented-Programing/lab6/: CMakeLists.txt
Object-Oriented-Programing/lab6/include/: Book.hpp  Console.hpp  Repository.hpp  Service.hpp  Test.hpp
Object-Oriented-Programing/lab6/src/: Book.cpp  Console.cpp  Repository.cpp  Service.cpp  Test.cpp  main.cpp
Object-Oriented-Programing/lab7/: CMakeLists.txt
Object-Oriented-Programing/lab7/include/: Book.hpp  Console.hpp  List.hpp  Repository.hpp  Service.hpp  Test.hpp  Validator.hpp  Vector.hpp
Object-Oriented-Programing/lab7/src/: Book.cpp  Console.cpp  Repository.cpp  Service.cpp  Test.cpp  Validator.cpp  main.cpp
Object-Oriented-Programing/lab8/: CMakeLists.txt
Object-Oriented-Programing/lab8/include/: Book.hpp  Console.hpp  Repository.hpp  Service.hpp  Validator.hpp
Object-Oriented-Programing/lab8/src/: Book.cpp  Console.cpp  Repository.cpp  Service.cpp  Test.cpp  Validator.cpp  main.cpp
Object-Oriented-Programing/lab9/: CMakeLists.txt
Object-Oriented-Programing/lab9/database/: export.html  stock.txt
Object-Oriented-Programing/lab9/include/: Book.hpp  Console.hpp  Repository.hpp  Service.hpp  Undo.hpp
Object-Oriented-Programing/lab9/src/: Book.cpp  Console.cpp  ConsoleSC.cpp  Repository.cpp  Service.cpp  Test.cpp  Undo.cpp  main.cpp
Object-Oriented-Programing/practic/abloajoaiei/: CMakeLists.txt  MainWindow.cpp  Repository.cpp  SideWindow.hpp  main.cpp
Object-Oriented-Programing/practic/melodii1/: CMakeLists.txt  Entity.cpp  MainWindow.cpp  MainWindow.hpp  Model.cpp  Model.hpp  Observer.hpp  Repository.cpp  Repository.hpp  Service.cpp  Service.hpp  Test.hpp  songs.txt
Object-Oriented-Programing/practic/produse/: CMakeLists.txt  GUI.hpp  Model.hpp  Product.hpp  Service.cpp  database.txt
Object-Oriented-Programing/practic/task/: CMakeLists.txt  MainWindow.cpp  Observer.hpp  Service.cpp  Service.hpp  main.cpp
Object-Oriented-Programing/practic/test/: CMakeLists.txt  Dress.hpp  GUI.hpp  Repository.cpp  Repository.hpp  Test.cpp  Test.hpp  main.cpp
Object-Oriented-Programing/practic/tractoare/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  Model.cpp  Model.hpp  Observer.hpp  Repository.cpp  Repository.hpp  Service.cpp  Service.hpp  Track.hpp  database.txt
Object-Oriented-Programing/practical-exam/untitled/: CMakeLists.txt
Object-Oriented-Programing/qt/: CMakeLists.txt  main.cpp
Object-Oriented-Programing/simulare/melodii2/: CMakeLists.txt  Entity.hpp  MainWindow.cpp  MainWindow.hpp  Repository.cpp  Repository.hpp  Service.cpp  Service.hpp  Song.hpp  main.cpp  songs.txt
Object-Oriented-Programing/simulare/tasks/: CMakeLists.txt  GUI.hpp  Repository.cpp  Repository.hpp  Service.hpp  StatusWindow.cpp  StatusWindow.hpp  Test.cpp  database.txt  main.cpp
Object-Oriented-Programing/test/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  Model.cpp  Model.hpp  Observer.hpp  Repository.cpp  Repository.hpp  Service.cpp  Service.hpp  StatusWindow.cpp  StatusWindow.hpp  Task.hpp  Test.cpp  Test.hpp  database.txt  main.cpp
Structuri-de-Date-si-Algoritmi/MDO/: CMakeLists.txt
Structuri-de-Date-si-Algoritmi/MDO/include/: IteratorMDO.h  MDO.h
Structuri-de-Date-si-Algoritmi/MDO/src/: App.cpp  IteratorMDO.cpp  LO.cpp  MDO.cpp
Structuri-de-Date-si-Algoritmi/MDO/tests/: TestExtins.cpp  TestExtinsList.cpp  TestScurt.cpp  TestScurtList.cpp
Structuri-de-Date-si-Algoritmi/MultimeABC/: CMakeLists.txt
Structuri-de-Date-si-Algoritmi/MultimeABC/include/: IteratorMultime.h  Multime.h
Structuri-de-Date-si-Algoritmi/MultimeABC/src/: App.cpp  IteratorMultime.cpp  Multime.cpp
Structuri-de-Date-si-Algoritmi/MultimeABC/tests/: TestExtins.cpp  TestScurt.cpp
Structuri-de-Date-si-Algoritmi/PriorityQueue/: CMakeLists.txt
Structuri-de-Date-si-Algoritmi/PriorityQueue/include/: CP.h
Structuri-de-Date-si-Algoritmi/PriorityQueue/src/: App.cpp  CP.cpp
Structuri-de-Date-si-Algoritmi/PriorityQueue/tests/: TestExtins.cpp  TestScurt.cpp
Structuri-de-Date-si-Algoritmi/RareMatrix/: CMakeLists.txt
Structuri-de-Date-si-Algoritmi/RareMatrix/include/: Matrice.h
Structuri-de-Date-si-Algoritmi/RareMatrix/src/: App.cpp  Matrice.cpp
Structuri-de-Date-si-Algoritmi/RareMatrix/tests/: TestExtins.cpp  TestScurt.cpp
Structuri-de-Date-si-Algoritmi/multime/: CMakeLists.txt
Structuri-de-Date-si-Algoritmi/multime/include/: IteratorMultime.h  Multime.h
Structuri-de-Date-si-Algoritmi/multime/src/: App.cpp  IteratorMultime.cpp  Multime.cpp
Structuri-de-Date-si-Algoritmi/multime/tests/: TestExtins.cpp  TestScurt.cpp
(+1344 files in other folders)
